--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <footer>
         <ul class="contact-list">
             <li>
-                <a href="mailto:rafael.dev.raizer@gmail.com">email_rafaelraizer76.com</a>
+                <a href="mailto:rafael.dev.raizer@gmail.com">email_rafael.dev.raizer/a>
             </li>
             <li>
                 <a href="https://github.com/RaizerTechDev">GitHub_RaizerTechDev</a>
